--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 leptos = { version = "0.4.9", features = ["csr"] }
+leptos_router = { version = "0.4.9", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
 
