--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-leptos = { version = "0.4.9", features = ["csr"] }
-leptos_router = { version = "0.4.9", features = ["csr"]}
+leptos = { version = "0.5.0-beta", features = ["csr"] }
+leptos_router = { version = "0.5.0-beta", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
 
