--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ leptos = { version = "0.5.0-beta", features = ["csr"] }
 leptos_router = { version = "0.5.0-beta", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
+serde_json = "1.0"
+web-sys = { version = "0.3", features = ["Window", "Storage"]}
 
