--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 leptos = { version = "0.5.0-beta", features = ["csr"] }
 leptos_router = { version = "0.5.0-beta", features = ["csr"]}
+leptos_meta = {version = "0.5.0-beta", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
 serde_json = "1.0"
