--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ leptos_router = { version = "0.5.0-beta", features = ["csr"]}
 leptos_meta = {version = "0.5.0-beta", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 web-sys = { version = "0.3", features = ["Window", "Storage"]}
 
