--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-leptos = { version = "0.5.0-beta2", features = ["csr"] }
-leptos_router = { version = "0.5.0-beta2", features = ["csr"]}
-leptos_meta = {version = "0.5.0-beta2", features = ["csr"]}
+leptos = { version = "0.5.0-rc1", features = ["csr"] }
+leptos_router = { version = "0.5.0-rc1", features = ["csr"]}
+leptos_meta = {version = "0.5.0-rc1", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 web-sys = { version = "0.3", features = ["Window", "Storage"]}
+log = "0.4"
 
