--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ leptos_router = { version = "0.5.0-rc2", features = ["csr"]}
 leptos_meta = {version = "0.5.0-rc2", features = ["csr"]}
 mercado = { path = "../mercado", features = ["client"], default-features = false }
 anyhow = "1.0"
+chrono = { version = "0.4", features = ["serde"]}
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 web-sys = { version = "0.3", features = ["Window", "Storage"]}
