--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,11 @@ serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 web-sys = { version = "0.3", features = ["Window", "Storage"]}
 log = "0.4"
+leptonic = { version = "0.3.0", features = ["csr"] }
+time = "0.3.30"
+leptos_icons = {version = "0.1.0", features= ["BsCheck", "BsX"]}
+
+[build-dependencies]
+leptonic-theme = "0.3.0"
+leptos-tiptap-build = "0.2.4"
 
